--- a/MyTrade/Views/User/BusinessReportsForUser.cshtml
+++ b/MyTrade/Views/User/BusinessReportsForUser.cshtml
@@ -18,7 +18,7 @@
                     <div class="card-header">
                         <div class="row">
                             <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                <h4>MTG Coin Business Reports</h4>
+                                <h4>Business Reports</h4>
                                 <span class="text-danger">
                                     @TempData["msg"]
                                 </span>
