--- a/MyTrade/Views/User/PayoutRequest.cshtml
+++ b/MyTrade/Views/User/PayoutRequest.cshtml
@@ -58,7 +58,7 @@
                                     <div class="form-group">
                                         <h6 style="color:red">Total Charges:  <label id="lbld" style="color:red;">0</label></h6><br />
                                         <h6 style="color:green">
-                                            Gross Amount to be deducted:  <span id="lblf" style="color:green;">0</span>
+                                            Gross MTG Coin to be deducted:  <span id="lblf" style="color:green;">0</span>
                                         </h6>
                                     </div>
                                 </div>
