--- a/MyTrade/Views/User/TopUp.cshtml
+++ b/MyTrade/Views/User/TopUp.cshtml
@@ -20,7 +20,7 @@
                         <div class="card-header">
                             <div class="row">
                                 <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                    <h4>MTG Coin Top-Up</h4>
+                                    <h4>Top-Up</h4>
                                     @*<span class="text-danger">
                                             @TempData["TopUp"]
                                         </span>*@
