--- a/MyTrade/Views/Wallet/AddWallet.cshtml
+++ b/MyTrade/Views/Wallet/AddWallet.cshtml
@@ -47,9 +47,13 @@
                                     <div class="example">
                                         <p class="mb-1"> In Rupess<span style="color: red"></span></p>
                                         <label id="result" class="pt-3 form-control"></label>
-                                     
-                                           <input type="hidden" id="IndianValue" value="@ViewBag.IndianValue" />
-                                       
+
+                                        @*<input type="hidden" id="IndianValue" name="IndianValue" value="@ViewBag.IndianValue" />*@
+
+
+                                        <input type="hidden" id="IndianValue" name="IndianValue" />
+
+
                                     </div>
 
 
@@ -265,6 +269,238 @@
 <script src="~/MyTradeWebsite/assets/js/jquery.min.js"></script>
 
 <script>
+
+
+        function validateform() {
+            debugger;
+            var formData = new FormData();
+            //var files = $("#imgupload").get(0).files;
+            //formData.append("file", files[0]);
+            formData.append("LoginId", $('#LoginId').val());
+            formData.append("Amount", $('#Amount').val());
+            formData.append("PaymentType", $('#PaymentType').val()); 
+            formData.append("PaymentMode", $('#PaymentMode').val());
+            formData.append("DDChequeNo", $('#DDChequeNo').val());
+            formData.append("DDChequeDate", $('#DDChequeDate').val());
+            formData.append("BankBranch", $('#BankBranch').val());
+            formData.append("BankName", $('#BankName').val());
+            formData.append("Remarks", $('#Remarks').val());
+            formData.append("AddedBy", $('#AddedBy').val());
+            formData.append("IndianValue", $('#IndianValue').val());
+
+            $(".errortext").removeClass("errortext");
+            if ($('#LoginId').val() == '') {
+                $("#LoginId").addClass('errortext');
+                $('#LoginId').focus();
+                return false;
+            }
+             if ($('#Amount').val() == '') {
+                $("#Amount").addClass('errortext');
+                $('#Amount').focus();
+                return false;
+            }
+           // if ($('#PaymentType').val() == "") {
+           //     $("#PaymentType").addClass('errortext');
+           //     $('#PaymentType').focus();
+           //     return false;
+           //}
+
+
+
+           // else if ($('#PaymentMode').val() == '') {
+           //     $("#PaymentMode").addClass('errortext');
+           //     $('#PaymentMode').focus();
+           //     return false;
+           // }
+           // else if ($('#BankName').val() == '') {
+           //     $("#BankName").addClass('errortext');
+           //     $('#BankName').focus();
+           //     return false;
+           // }
+           // else if ($('#DDChequeNo').val() == '') {
+           //     $("#DDChequeNo").addClass('errortext');
+           //     $('#DDChequeNo').focus();
+           //     return false;
+           // }
+           // else if ($('#BankBranch').val() == '') {
+           //     $("#BankBranch").addClass('errortext');
+           //     $('#BankBranch').focus();
+           //     return false;
+           // }
+           // else if ($('#DDChequeNo').val() == '') {
+           //     $("#DDChequeNo").addClass('errortext');
+           //     $('#DDChequeNo').focus();
+           //     return false;
+           // }
+           // else if ($('#DDChequeDate').val() == '') {
+           //     $("#DDChequeDate").addClass('errortext');
+           //     $('#DDChequeDate').focus();
+           //     return false;
+           // }
+
+
+                ////////////////////////////////
+
+             //if ($('#PaymentType').val() == "2") {
+             //   if ($('#PaymentMode').val() == '') {
+             //       $("#PaymentMode").addClass('errortext');
+             //       $('#PaymentMode').focus();
+             //       return false;
+             //   }
+             //    if (($("#PaymentMode option:selected").text()) != 'Cash' && ($("#PaymentMode option:selected").text()) != "UPI") {
+             //     if ($('#BankName').val() == '') {
+             //           $("#BankName").addClass('errortext');
+             //           $('#BankName').focus();
+             //           return false;
+             //       }
+             //      if ($('#DDChequeNo').val() == '') {
+             //           $("#DDChequeNo").addClass('errortext');
+             //           $('#DDChequeNo').focus();
+             //           return false;
+             //       }
+             //      if ($('#DDChequeDate').val() == '') {
+             //           $("#DDChequeDate").addClass('errortext');
+             //           $('#DDChequeDate').focus();
+             //           return false;
+             //       }
+             //      if ($('#BankBranch').val() == '') {
+             //           $("#BankBranch").addClass('errortext');
+             //           $('#BankBranch').focus();
+             //           return false;
+             //       }
+             //   }
+             //    if ($("#PaymentMode option:selected").text() == "UPI") {
+             //       if ($('#BankName').val() == '') {
+             //           $("#BankName").addClass('errortext');
+             //           $('#BankName').focus();
+             //           return false;
+             //       }
+             //        if ($('#DDChequeNo').val() == '') {
+             //           $("#DDChequeNo").addClass('errortext');
+             //           $('#DDChequeNo').focus();
+             //           return false;
+             //       }
+             //        if ($('#DDChequeDate').val() == '') {
+             //           $("#DDChequeDate").addClass('errortext');
+             //           $('#DDChequeDate').focus();
+             //           return false;
+             //       }
+             //   }
+             //   //else {
+
+             //   //}
+             //   //return true;
+             //   }
+          
+                ////////////////////////////////
+            else {
+                $.ajax({
+                    type: 'POST',
+                    url: "/Wallet/AddWalletUsingJson",
+                    data: formData,
+                    cache: false,
+                    contentType: false,
+                    processData: false,
+                    success: function (response) {
+                        if (response.result == "yes") {
+                            //alert("Requested Successfully.");
+                            window.location.href = '/Wallet/AddWallet';
+                        }
+                    }
+                })
+
+            }
+        }
+
+  
+
+    //function validateform() {
+    //    $(".errortext").removeClass("errortext");
+    //    if ($('#LoginId').val() == '') {
+    //        $("#LoginId").addClass('errortext');
+    //        $('#LoginId').focus();
+    //        return false;
+    //    }
+    //    if ($('#Amount').val() == '') {
+    //        $("#Amount").addClass('errortext');
+    //        $('#Amount').focus();
+    //        return false;
+    //    }
+    //    if ($('#PaymentType').val() == '') {
+    //        $("#PaymentType").addClass('errortext');
+    //        $('#PaymentType').focus();
+    //        return false;
+    //    }
+    //    if ($('#PaymentType').val() == "2") {
+    //        if ($('#PaymentMode').val() == '') {
+    //            $("#PaymentMode").addClass('errortext');
+    //            $('#PaymentMode').focus();
+    //            return false;
+    //        }
+    //        if (($("#PaymentMode option:selected").text()) != 'Cash' && ($("#PaymentMode option:selected").text()) != "UPI") {
+    //            if ($('#BankName').val() == '') {
+    //                $("#BankName").addClass('errortext');
+    //                $('#BankName').focus();
+    //                return false;
+    //            }
+    //            if ($('#DDChequeNo').val() == '') {
+    //                $("#DDChequeNo").addClass('errortext');
+    //                $('#DDChequeNo').focus();
+    //                return false;
+    //            }
+    //            if ($('#DDChequeDate').val() == '') {
+    //                $("#DDChequeDate").addClass('errortext');
+    //                $('#DDChequeDate').focus();
+    //                return false;
+    //            }
+    //            if ($('#BankBranch').val() == '') {
+    //                $("#BankBranch").addClass('errortext');
+    //                $('#BankBranch').focus();
+    //                return false;
+    //            }
+    //        }
+    //        else if ($("#PaymentMode option:selected").text() == "UPI") {
+    //            if ($('#BankName').val() == '') {
+    //                $("#BankName").addClass('errortext');
+    //                $('#BankName').focus();
+    //                return false;
+    //            }
+    //            if ($('#DDChequeNo').val() == '') {
+    //                $("#DDChequeNo").addClass('errortext');
+    //                $('#DDChequeNo').focus();
+    //                return false;
+    //            }
+    //            if ($('#DDChequeDate').val() == '') {
+    //                $("#DDChequeDate").addClass('errortext');
+    //                $('#DDChequeDate').focus();
+    //                return false;
+    //            }
+    //        }
+    //        else {
+
+    //        }
+    //    }
+    //    else
+    //    {
+    //        $.ajax({
+    //            url: '/Wallet/AddWalletTest', type: 'Post', dataType: 'json',
+    //            data: {'':},
+    //            success:function(data)
+    //            {
+    //                if(data.Result=="yes")
+    //                {
+    //                    alert("Requested Successfully.");
+    //                    window.location.href='/Wallet/AddWallet';
+    //                }
+    //            }
+    //        });
+    //    }
+
+
+    //    return true;
+    //}
+
+
     function ConvertMony() {
         debugger;
         //if ($("#Countryid").val() == "America") {
@@ -303,14 +539,17 @@
         })
 
         .then(data => {
+            debugger;
             let rate = data.rates[toCurrency];
             let total = rate * amt;
-           
+
             //result.innerHTML = `${amt} ${fromCurrency} = ${total}
             result.innerHTML = `${amt}$  = ${total}
-             
+
             ${toCurrency}`;
-            IndianValue.innerHTML = total;
+            //IndianValue.innerHTML = total;
+         $("#IndianValue").val(total);
+
         });
     }
 
@@ -323,75 +562,78 @@
         //$("#PaymentType").val("");
         //getpaymentTypedetails();
     });
-    function validateform() {
-        $(".errortext").removeClass("errortext");
-        if ($('#LoginId').val() == '') {
-            $("#LoginId").addClass('errortext');
-            $('#LoginId').focus();
-            return false;
-        }
-        if ($('#Amount').val() == '') {
-            $("#Amount").addClass('errortext');
-            $('#Amount').focus();
-            return false;
-        }
-        if ($('#PaymentType').val() == '') {
-            $("#PaymentType").addClass('errortext');
-            $('#PaymentType').focus();
-            return false;
-        }
-        if ($('#PaymentType').val() == "2") {
-            if ($('#PaymentMode').val() == '') {
-                $("#PaymentMode").addClass('errortext');
-                $('#PaymentMode').focus();
-                return false;
-            }
-            if (($("#PaymentMode option:selected").text()) != 'Cash' && ($("#PaymentMode option:selected").text()) != "UPI") {
-                if ($('#BankName').val() == '') {
-                    $("#BankName").addClass('errortext');
-                    $('#BankName').focus();
-                    return false;
-                }
-                if ($('#DDChequeNo').val() == '') {
-                    $("#DDChequeNo").addClass('errortext');
-                    $('#DDChequeNo').focus();
-                    return false;
-                }
-                if ($('#DDChequeDate').val() == '') {
-                    $("#DDChequeDate").addClass('errortext');
-                    $('#DDChequeDate').focus();
-                    return false;
-                }
-                if ($('#BankBranch').val() == '') {
-                    $("#BankBranch").addClass('errortext');
-                    $('#BankBranch').focus();
-                    return false;
-                }
-            }
-            else if ($("#PaymentMode option:selected").text() == "UPI") {
-                if ($('#BankName').val() == '') {
-                    $("#BankName").addClass('errortext');
-                    $('#BankName').focus();
-                    return false;
-                }
-                if ($('#DDChequeNo').val() == '') {
-                    $("#DDChequeNo").addClass('errortext');
-                    $('#DDChequeNo').focus();
-                    return false;
-                }
-                if ($('#DDChequeDate').val() == '') {
-                    $("#DDChequeDate").addClass('errortext');
-                    $('#DDChequeDate').focus();
-                    return false;
-                }
-            }
-            else {
+    //function validateform() {
+    //    $(".errortext").removeClass("errortext");
+    //    if ($('#LoginId').val() == '') {
+    //        $("#LoginId").addClass('errortext');
+    //        $('#LoginId').focus();
+    //        return false;
+    //    }
+    //    if ($('#Amount').val() == '') {
+    //        $("#Amount").addClass('errortext');
+    //        $('#Amount').focus();
+    //        return false;
+    //    }
+    //    if ($('#PaymentType').val() == '') {
+    //        $("#PaymentType").addClass('errortext');
+    //        $('#PaymentType').focus();
+    //        return false;
+    //    }
+    //    if ($('#PaymentType').val() == "2") {
+    //        if ($('#PaymentMode').val() == '') {
+    //            $("#PaymentMode").addClass('errortext');
+    //            $('#PaymentMode').focus();
+    //            return false;
+    //        }
+    //        if (($("#PaymentMode option:selected").text()) != 'Cash' && ($("#PaymentMode option:selected").text()) != "UPI") {
+    //            if ($('#BankName').val() == '') {
+    //                $("#BankName").addClass('errortext');
+    //                $('#BankName').focus();
+    //                return false;
+    //            }
+    //            if ($('#DDChequeNo').val() == '') {
+    //                $("#DDChequeNo").addClass('errortext');
+    //                $('#DDChequeNo').focus();
+    //                return false;
+    //            }
+    //            if ($('#DDChequeDate').val() == '') {
+    //                $("#DDChequeDate").addClass('errortext');
+    //                $('#DDChequeDate').focus();
+    //                return false;
+    //            }
+    //            if ($('#BankBranch').val() == '') {
+    //                $("#BankBranch").addClass('errortext');
+    //                $('#BankBranch').focus();
+    //                return false;
+    //            }
+    //        }
+    //        else if ($("#PaymentMode option:selected").text() == "UPI") {
+    //            if ($('#BankName').val() == '') {
+    //                $("#BankName").addClass('errortext');
+    //                $('#BankName').focus();
+    //                return false;
+    //            }
+    //            if ($('#DDChequeNo').val() == '') {
+    //                $("#DDChequeNo").addClass('errortext');
+    //                $('#DDChequeNo').focus();
+    //                return false;
+    //            }
+    //            if ($('#DDChequeDate').val() == '') {
+    //                $("#DDChequeDate").addClass('errortext');
+    //                $('#DDChequeDate').focus();
+    //                return false;
+    //            }
+    //        }
+    //        else {
 
-            }
-        }
+    //        }
+    //    }
+    //    return true;
+    //}
 
-        return true;
-    }
+
+
+
     jQuery.noConflict();
     $('#DDChequeDate').datepicker({
         dateFormat: 'dd/mm/yy',
