--- a/MyTrade/UserPanel/css/style.css
+++ b/MyTrade/UserPanel/css/style.css
@@ -47087,13 +47087,14 @@ $color_pallate_15: #ed0b4c; */
           position: relative;
         }
 
-        .demo-wrap:before {
-          content: ' ';
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          opacity: 0.4;
-          background-image: url('/MytradeNewWebsite/assets/img/login_bg.jpg');
-          background-repeat: no-repeat;
-          background-size: 100% 130%;
-        }
+.demo-wrap:before {
+    content: ' ';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    background-image: url('../../MyTradeWebsite/assets/img/login_bg.jpg');
+    /*background-image: url('/MytradeWebsite/assets/img/login_bg.jpg');*/
+    background-repeat: no-repeat;
+    background-size: 100% 130%;
+}
