--- a/MyTrade/UserPanel/css/style.css
+++ b/MyTrade/UserPanel/css/style.css
@@ -47097,3 +47097,184 @@ $color_pallate_15: #ed0b4c; */
           background-repeat: no-repeat;
           background-size: 100% 130%;
         }
+
+/* dashboard css */
+
+.referral {
+        font-weight: 600;
+        color: #ff0000;
+        font-size: 23px;
+        letter-spacing: 0;
+    }
+
+    .referral-url {
+        background-color: #f5e2e2;
+        padding: 5px 20px;
+        border: 1px solid red;
+        border-radius: 20px;
+    }
+
+    .btn_my_referral {
+        position: absolute;
+        top: 0px;
+        right: 92px;
+        font-size: 18px;
+        text-decoration: none;
+        color: #fff;
+        font-weight: 700;
+    }
+
+    .modal-footer {
+        border: none;
+    }
+
+    .s-icon a {
+        /* background-color: #eb8153; */
+        border-radius: 5px;
+        margin: 10px;
+        width: 35px;
+        height: 35px;
+        line-height: 33px;
+        display: inline-block;
+        text-align: center;
+        color: white;
+        display: inline-block;
+        text-align: center;
+        white-space: nowrap;
+        vertical-align: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        border: 1px solid transparent;
+    }
+
+    .alert-light-red {
+        color: #ff0000;
+        background-color: #efe5e5;
+        border-color: #ff0000;
+    }
+
+    @@media (max-width: 991px) {
+        .alert-icon-right {
+            border-right: 45px solid;
+        }
+    }
+
+    .widget .widget-heading {
+        margin-bottom: 0px;
+    }
+
+    .particular-balance.d-flex {
+        justify-content: space-between;
+    }
+
+        .particular-balance.d-flex h5 {
+            font-size: 14px;
+        }
+
+        .particular-balance.d-flex p {
+            font-size: 19px;
+            color: white;
+        }
+
+    .widget-account-invoice-three .widget-heading {
+        padding: 15px 20px 15px 20px;
+    }
+
+    .widget.referral {
+        padding: 0px 20px;
+        margin-top: -70px;
+    }
+
+    .widget-account-invoice-three.one .widget-heading {
+        background: linear-gradient(135deg, #4361ee 0%, #7c8fe9 100%);
+    }
+
+    .widget-account-invoice-three.second .widget-heading {
+        background: linear-gradient(135deg, #c71e1f 0%, #e39091 100%);
+    }
+
+    .widget-account-invoice-three.third .widget-heading {
+        background: linear-gradient(60deg,#26c6da,#008090);
+    }
+
+    .widget-account-invoice-three.four .widget-heading {
+        background: linear-gradient(60deg,#d6af3c,#865c00);
+    }
+
+    .widget-account-invoice-three.five .widget-heading {
+        background: linear-gradient(60deg,#efbb70,#fb8c00);
+    }
+
+    .widget-account-invoice-three.six .widget-heading {
+        background: linear-gradient(60deg,#cfb7a6,#623d0e);
+    }
+
+    .widget-account-invoice-three.seven .widget-heading {
+        background: linear-gradient(60deg,#c99dc5,#aa20e3);
+    }
+
+    .widget-account-invoice-three.eight .widget-heading {
+        background: linear-gradient(60deg,#fbfbfd,#cccfd3);
+    }
+
+    .carousel-caption {
+        /*bottom: -16px;*/
+        background-color: #282828ba;
+    }
+
+    .carousel-indicators {
+        bottom: -18px;
+    }
+
+    .carousel-caption.d-none.d-sm-block h5 {
+        color: #ffffff;
+    }
+
+    .carousel-caption.d-none.d-sm-block p {
+        color: #ffffff;
+    }
+
+    .img-height {
+        height: 270px;
+    }
+
+    .UserDetailsss {
+        color: #ffffff !important;
+        font-size: 20px;
+    }
+    
+    .UserDetailsssTitle {
+        color: #ffffff !important;
+        font-size: 20px;
+    }
+
+    .mtgcoin1{
+        transform: translate(88px, -7px);
+        z-index:1000;
+    }
+    .mtgcoin2{
+        transform: translate(108px, -7px);
+        z-index:1000;
+    }
+    .mtgcoin3{
+        transform: translate(108px, -7px);
+        z-index:1000;
+    }
+    .mtgcoin4{
+        transform: translate(68px, -7px);
+        z-index:1000;
+    }
+    .mtgcoin5{
+        transform: translate(38px, -7px);
+        z-index:1000;
+    }
+    .mtgcoin6{
+        transform: translate(48px, -7px);
+        z-index:1000;
+    }
+    .mtgcoin7{
+        transform: translate(108px, -7px);
+        z-index:1000;
+    }
