--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -372,9 +372,10 @@
                                     <p class="mb-0 fs-12">Lorem ipsum dolor sit amet, consectetur</p>
                                 </div>
                                 <select class="form-control custom-image-select-1 image-select mt-3 mt-sm-0">
-                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">23,511 ETH</option>
-                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">345,455 ETH</option>
-                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">789,123 ETH</option>
+                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">MTGcoin</option>
+                                    @*<option data-thumbnail="images/svg/eth.svg">23,511 ETH</option>
+                                    <option data-thumbnail="images/svg/lit3.svg">345,455 ETH</option>
+                                    <option data-thumbnail="images/svg/btc.svg">789,123 ETH</option>*@
                                 </select>
                             </div>
                             <div class="card-body">
@@ -447,10 +448,11 @@
                             </div>
                             <div class="card-body p-3">
                                 <select class="form-control custom-image-select-2 image-select mt-3 mt-sm-0">
-                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">Dash Coin</option>
-                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">Ripple</option>
-                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">Ethereum</option>
-                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">Bitcoin</option>
+                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">MTGcoin</option>
+                                    @*<option data-thumbnail="images/svg/coin.svg">Dash Coin</option>
+                                    <option data-thumbnail="images/svg/btc.svg">Ripple</option>
+                                    <option data-thumbnail="images/svg/eth.svg">Ethereum</option>
+                                    <option data-thumbnail="images/svg/btc.svg">Bitcoin</option>*@
                                 </select>
                                 <div class="table-responsive">
                                     <table class="table text-center bg-info-hover tr-rounded">
@@ -527,10 +529,10 @@
                             </div>
                             <div class="card-body p-3">
                                 <select class="form-control custom-image-select-2 image-select mt-3 mt-sm-0">
-                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">Bitcoin</option>
-                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">Litecoin</option>
+                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">MTGcoin</option>
+                                    @*<option data-thumbnail="/UserPanel/images/MtgCoinPng.png">Litecoin</option>
                                     <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">Ripple</option>
-                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">Ethereum</option>
+                                    <option data-thumbnail="/UserPanel/images/MtgCoinPng.png">Ethereum</option>*@
                                 </select>
                                 <div class="table-responsive">
                                     <table class="table text-center bg-warning-hover tr-rounded">
