--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -139,8 +139,9 @@
         <div class="nav-header">
             <a href="/user/UserDashboard" class="brand-logo">
                 <img src="~/MyTradeWebsite/assets/img/logo-2.png" class="img-fluid" style="width:120px;" />
+               <img src="~/UserPanel/images/MtgCoinPng.png" style="height:100%;" /> 
             </a>
-
+          
             <div class="nav-control">
                 <div class="hamburger">
                     <span class="line"></span><span class="line"></span><span class="line"></span>
