changes in user panel

--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -237,7 +237,7 @@
                     <li>
                         <a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
                             <i class="fas fa-wallet"></i>
-                            <span class="nav-text">My Trade Wallet</span>
+                            <span class="nav-text">MTG Wallet</span>
                         </a>
                         <ul aria-expanded="false">
                             @if (Session["IdActivated"] != null)
