--- a/MyTrade/Views/User/TopUpList.cshtml
+++ b/MyTrade/Views/User/TopUpList.cshtml
@@ -47,7 +47,7 @@
                                             <th>S No.</th>
                                             <th>Name</th>
                                             <th>Product Name</th>
-                                            <th>Topup MTG Coin</th>
+                                            <th>Topup MTG Token/USDT</th>
                                             @*<th>Used For</th>*@
                                             <th>BV</th>
                                             @*<th>Is Calculated</th>*@
