--- a/MyTrade/Views/User/PinTransferReport.cshtml
+++ b/MyTrade/Views/User/PinTransferReport.cshtml
@@ -45,7 +45,7 @@
                                 <tr>
                                     <th>Sr No.</th>
                                     <th>EPin No</th>
-                                    <th>Pin MTG Coin</th>
+                                    <th>Pin MTG Token/USDT</th>
                                     <th>BV</th>
                                     <th>Package Name</th>
                                     @*<th>From Id</th>
